[gd_scene load_steps=46 format=3 uid="uid://ckc0q8k0gl23y"]

[ext_resource type="Script" uid="uid://cnja160w4filu" path="res://scripts/enemies/orc_enemy.gd" id="1_wma73"]
[ext_resource type="Texture2D" uid="uid://u2lxer5njr50" path="res://assets/sprites/Characters/Orc/Orc/Orc-Attack01.png" id="2_45sbe"]
[ext_resource type="Texture2D" uid="uid://cmi3rduyent3i" path="res://assets/sprites/Characters/Orc/Orc/Orc-Idle.png" id="2_becf2"]
[ext_resource type="Texture2D" uid="uid://dq0db20ejmkvq" path="res://assets/sprites/Characters/Orc/Orc/Orc-Death.png" id="3_4m2l4"]
[ext_resource type="Texture2D" uid="uid://suva2mnevs8j" path="res://assets/sprites/Characters/Orc/Orc/Orc-Walk.png" id="3_becf2"]
[ext_resource type="Texture2D" uid="uid://bw2i61l3jmmpe" path="res://assets/sprites/Characters/Orc/Orc/Orc-Hurt.png" id="3_smdcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qf7dh"]
atlas = ExtResource("2_45sbe")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0s2b"]
atlas = ExtResource("2_45sbe")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktm3i"]
atlas = ExtResource("2_45sbe")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr2jg"]
atlas = ExtResource("2_45sbe")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg67x"]
atlas = ExtResource("2_45sbe")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwbfq"]
atlas = ExtResource("2_45sbe")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0n26"]
atlas = ExtResource("3_4m2l4")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvlon"]
atlas = ExtResource("3_4m2l4")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvcfa"]
atlas = ExtResource("3_4m2l4")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4smu8"]
atlas = ExtResource("3_4m2l4")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c633"]
atlas = ExtResource("3_smdcw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fim8v"]
atlas = ExtResource("3_smdcw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_heqpi"]
atlas = ExtResource("3_smdcw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a83lk"]
atlas = ExtResource("3_smdcw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5jyg"]
atlas = ExtResource("2_becf2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lefp"]
atlas = ExtResource("2_becf2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_56ptx"]
atlas = ExtResource("2_becf2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5sn7"]
atlas = ExtResource("2_becf2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_avpmn"]
atlas = ExtResource("2_becf2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o705r"]
atlas = ExtResource("2_becf2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni5qr"]
atlas = ExtResource("3_becf2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0o0e"]
atlas = ExtResource("3_becf2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hir4x"]
atlas = ExtResource("3_becf2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hygx8"]
atlas = ExtResource("3_becf2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk7jh"]
atlas = ExtResource("3_becf2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4fkj"]
atlas = ExtResource("3_becf2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_865m7"]
atlas = ExtResource("3_becf2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecp0i"]
atlas = ExtResource("3_becf2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wma73"]
atlas = ExtResource("3_becf2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_becf2"]
atlas = ExtResource("3_becf2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_45sbe"]
atlas = ExtResource("3_becf2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_smdcw"]
atlas = ExtResource("3_becf2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m2l4"]
atlas = ExtResource("3_becf2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjo5r"]
atlas = ExtResource("3_becf2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv8es"]
atlas = ExtResource("3_becf2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr6vb"]
atlas = ExtResource("3_becf2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_eojnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf7dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0s2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktm3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr2jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg67x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwbfq")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0n26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvlon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvcfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4smu8")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c633")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fim8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heqpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a83lk")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5jyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lefp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56ptx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5sn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avpmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o705r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni5qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0o0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hir4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hygx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk7jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4fkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_865m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecp0i")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wma73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_becf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45sbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smdcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m2l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjo5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv8es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr6vb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyp2m"]
size = Vector2(52, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_becf2"]
size = Vector2(58, 72)

[node name="OrcEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wma73")
health = 110
max_health = 110
movement_speed = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_eojnx")
animation = &"attack"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -8)
shape = SubResource("RectangleShape2D_dyp2m")

[node name="FloorRaycast" type="RayCast2D" parent="."]
position = Vector2(24, 0)

[node name="AttackZone" type="Area2D" parent="."]
position = Vector2(57, -8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource("RectangleShape2D_becf2")

[node name="RecoverTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="hurt" from="." to="." method="_on_hurt"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animation_frame_changed"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_recover_timer_timeout"]
